# fast-api-server

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
